correct dashboard newsletter input width to 100% on mobiles

--- a/scss/dashboard/_dashboard_your_data.scss
+++ b/scss/dashboard/_dashboard_your_data.scss
@@ -190,6 +190,11 @@
                 .your-logo {
                     max-width: 100%;
                 }
+                &.newsletter {
+                    input {
+                        width: 100%;
+                    }
+                }
             }
         }
     } 
